feat: Improve layout and styling

--- a/index.pug
+++ b/index.pug
@@ -2,11 +2,21 @@ extends /layout/layout
 
 block main
         .container.columns
-            section.bg-secondary 
-                article 
+            section.container.col-9
+                article.hero.bg-secondary 
+                    h3 Latest new
+                    p Lorem Ipsum dolor sit amet
+                .divider
+                article.bg-gray
                     include:metaMD content.md
-        aside.bg-secondary 
-            ul
-                li Latest
-                li Tags
-                li More info
+                    .divider
+                article
+                    include:metaMD content.md
+                    .divider
+                article
+                    include:metaMD content.md
+                    .divider
+            aside.container.col-3.bg-secondary
+                h5 Read more
+                p
+                    include:metaMD content.md
