fix: Correct footer margin

--- a/layout/footer.pug
+++ b/layout/footer.pug
@@ -1,2 +1,2 @@
-footer.container.text-gray.text-right
-    p #{license}
+footer.text-gray.text-center.footer--height-medium
+    p.m-1-2.text-s #{license}
