--- a/index.pug
+++ b/index.pug
@@ -7,15 +7,14 @@ block main
                     h3 Latest new
                     p Lorem Ipsum dolor sit amet
                 .divider
-                article.bg-gray
-                    include:metaMD content.md
-                    .divider
                 article
                     include:metaMD content.md
                     .divider
                 article
                     include:metaMD content.md
                     .divider
+                article
+                    include:metaMD content.md
             aside.container.col-3.bg-secondary
                 h5 Read more
                 p
