--- a/layout/layout.pug
+++ b/layout/layout.pug
@@ -12,7 +12,7 @@ html
         block head2
     
     body
-        header.container.navbar.p-fixed.bg-gray.navbar--height-big
+        header.container.navbar.p-fixed.navbar--bg.navbar--height-big
             section.navbar-section
                 a(class='btn btn-link',href='#') Home
                 a(class='btn btn-link',href='#') Contact
