feat: Add styling to aside

--- a/index.pug
+++ b/index.pug
@@ -16,7 +16,21 @@ block main
                     .divider
                 article
                     include:metaMD content.md
-            aside.container.col-3.bg-secondary
-                //- TO-DO: complete
-                ul.accordion
-                    li
+            aside.container.col-3.bg-secondary 
+                    ul.menu.menu-nav 
+                        h6 Lorem ipsum
+                        li.menu-item
+                            a(href='#') Element 1
+                        li.menu-item
+                            a(href='#') Element 2
+                        li.menu-item
+                            a(href='#') Element 3
+                        li.menu-item
+                            a(href='#') Element 4
+                    .divider
+                    .container
+                        h6 Lorem ipsum
+                        p
+                            include:metaMD content.md
+
+
