feat: add more content

--- a/index.pug
+++ b/index.pug
@@ -31,6 +31,6 @@ block main
                     .container
                         h6 Lorem ipsum
                         p
-                            include:metaMD content.md
+                            include:metaMD content-small.md
 
 
