fix: Correct right alignment for search section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,4 +4,5 @@
 .hero--gradient{background:#4b48d6; background:linear-gradient(to right,#4b48d6,#e5e5f9);}
 .footer--height-medium{height:1rem;}
 .m-1-2{margin:1.2rem;}
-.text-s{font-size:0.7rem;} /* mB v4.16.02 on 2019-02-07T11:01:57.523Z */
+.pr-0-4{padding-right:0.4rem;}
+.text-s{font-size:0.7rem;} /* mB v4.16.02 on 2019-02-07T13:26:25.147Z */
