--- a/layout/layout.pug
+++ b/layout/layout.pug
@@ -17,7 +17,7 @@ html
             section.navbar-section
                 a(class='btn btn-link',href='#') Home
                 a(class='btn btn-link',href='#') Contact
-            section.navbar-section
+            section.navbar-section.pr-0-4
                 form.input-group.input-inline
                     input(class='form-input', type='text', placeholder='search')
                     button.btn.btn-primary.input-group-btn Search
